# Piano_Trade

./: Makefile  README.md  feeds.yaml  main.py  pyproject.toml  sample_rss.xml
.github/workflows/: daily.yml
src/collector/: fetch_html.py  fetch_rss.py
tests/: test_extraction.py  test_fetch_rss.py
